increment.md updated

--- a/1.increment.md
+++ b/1.increment.md
@@ -102,4 +102,27 @@ Till here we have created an store and Reducer which runs on the store. See
 above Fig: diagram1.
 Still it is remaining to create an action and dispatch it.
 
+// now we need to create another function mapDispatchToProps(dispatch) on
+counter.js
+// this dispatch is the dispatch of a redux
 
+function mapDispatchToProps(dispatch) {
+  return {
+    onIncrementClick: () => {
+      // this onIncrementClick will come on the props e.g Counter(props) like
+      //props.onIncrementClick
+      console.log('clickin');
+     // it will not play in action unless you return mapDispatchToProps on
+connect() method
+    }
+  }
+}
+
+export default connect(mapStateToProps, mapDispatchToProps)(Counter);
+
+// on Counter.js component
+<button onClick={props.onIncrementClick}>increment</button>
+
+Note:
+mapStateToProps() is a utility which helps component get updated state
+mapDispatchToProps() is a utility which helps component to fire an action event
