increment.md updated

--- a/1.increment.md
+++ b/1.increment.md
@@ -106,7 +106,7 @@ Still it is remaining to create an action and dispatch it.
 counter.js
 // this dispatch is the dispatch of a redux
 
-function mapDispatchToProps(dispatch) {
+function mapDispatchToProps (dispatch) {
   return {
     onIncrementClick: () => {
       // this onIncrementClick will come on the props e.g Counter(props) like
@@ -114,6 +114,12 @@ function mapDispatchToProps(dispatch) {
       console.log('clickin');
      // it will not play in action unless you return mapDispatchToProps on
 connect() method
+
+    // now it's a time to play with an actions
+    // action is an object having type property to know by reducers
+    const action = { type: 'INCREMENT' };
+    dispatch(action);
+    // now this action calls on the reducer() which is inside store/index.js
     }
   }
 }
