switch(action.type) and cases are called where increment operation is performed

--- a/1.increment.md
+++ b/1.increment.md
@@ -132,3 +132,20 @@ export default connect(mapStateToProps, mapDispatchToProps)(Counter);
 Note:
 mapStateToProps() is a utility which helps component get updated state
 mapDispatchToProps() is a utility which helps component to fire an action event
+
+step 4: src/store/index.js, go there and call switch() inside reducer().
+// now we need to call switch statement action.type will be case which we
+defined on the dispatch action method
+
+const reducer = (state=initialState, action) => {
+  console.log('reducer running', action);
+  switch (action.type) {
+    case 'INCREMENT':
+      return Object.assign({}, state, {count: state.count + 1});
+      // {} -> create a new brand object
+      // state -> copies the state to this brand new object
+      // and then override with state.count + 1
+    default:
+      return state;
+  }
+}
